fix: dependencies & annotations

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-universal-pedometer",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "React Native universal pedometer.",
   "main": "index.js",
   "scripts": {
@@ -21,8 +21,5 @@
   "bugs": {
     "url": "https://github.com/matheusmariano/react-native-universal-pedometer/issues"
   },
-  "homepage": "https://github.com/matheusmariano/react-native-universal-pedometer#readme",
-  "dependencies": {
-    "react-native": "^0.31.0"
-  }
+  "homepage": "https://github.com/matheusmariano/react-native-universal-pedometer#readme"
 }
