--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/matheusmariano/react-native-universal-pedometer.git"
   },
+  "peerDependencies": {
+    "react-native": ">=0.40.0"
+  },
   "keywords": [
     "react",
     "native",
